add mach5 proposal

--- a/microkernel/mach/gnumach/projects.mdwn
+++ b/microkernel/mach/gnumach/projects.mdwn
@@ -35,6 +35,8 @@ so that no duplicate efforts end up.
 
   * [[Open Issues|tag/open_issue_gnumach]]
 
+  * [[Mach_5]]
+
   * Update the core architecture and drivers
 
       * Check what NetBSD, FreeBSD and Linux do with their host specific code
