--- a/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
@@ -33,7 +33,7 @@ An index of things to work on w.r.t. virtualization.
 
       * [[Capsicum]]
 
-      * [[Virtual_Square_View-OS]]
+      * [[service_solahart_jakarta_selatan__082122541663/Virtual_square_view-os]]
 
       * [Namespace file descriptors](http://lwn.net/Articles/407495/),
         2010-09-29
