--- a/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
@@ -2644,7 +2644,7 @@ note the additional [[upstart]] page.
     <gnu_srs> k!
 
 
-## [[glibc_IOCTLs]], `TIOCCONS`
+## [[service_solahart_jakarta_selatan__082122541663/Glibc_ioctls]], `TIOCCONS`
 
 
 ## IRC, OFTC, #debian-hurd, 2014-02-04
