update for rename of open_issues/mach_migrating_threads.mdwn to service_solahart_jakarta_selatan__082122541663/mach_migrating_threads.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/translators_set_up_by_untrusted_users.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/translators_set_up_by_untrusted_users.mdwn
@@ -372,7 +372,7 @@ Continued discussion about [[resource_management_problems/pagers]].
     <braunr> the problem is that, moving to a complete migrating thread model
       would make that impossible (or very complicated to do right)
 
-[[mach_migrating_threads]].
+[[service_solahart_jakarta_selatan__082122541663/mach_migrating_threads]].
 
     <braunr> would it be ok to remove this feature ?
     <youpi> well, we need to have SIGINT working, don't we?
