--- a/service_solahart_jakarta_selatan__082122541663/anatomy_of_a_hurd_system.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/anatomy_of_a_hurd_system.mdwn
@@ -194,7 +194,7 @@ RPC stubs.
   * <http://www.gnu.org/software/global/>
 
 
-# [[Hurd_101]]
+# [[service_solahart_jakarta_selatan__082122541663/Hurd_101]]
 
 
 # [[hurd/IO_path]]
