update for rename of open_issues/performance/microbenchmarks.mdwn to service_solahart_jakarta_selatan__082122541663/performance/microbenchmarks.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/performance/fork.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance/fork.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 Our [[`fork` implementation|glibc/fork]] is nontrivial.
 
 To do: hard numbers.
-[[Microbenchmarks]]?
+[[service_solahart_jakarta_selatan__082122541663/performance/Microbenchmarks]]?
 
 
 # Windows / Cygwin
