update for rename of open_issues/syslog.mdwn to service_solahart_jakarta_selatan__082122541663/syslog.mdwn

--- a/public_hurd_boxen/installation/snubber.mdwn
+++ b/public_hurd_boxen/installation/snubber.mdwn
@@ -26,7 +26,7 @@ Yet more:
   * libyaml-perl (for ikiwiki's YAML field plugins)
 
 
-## [[open_issues/syslog]]
+## [[service_solahart_jakarta_selatan__082122541663/syslog]]
 
     $ find /etc/rc*/ | grep syslog | sudo xargs rm
 
