update for rename of open_issues/syslog.mdwn to service_solahart_jakarta_selatan__082122541663/syslog.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
@@ -229,7 +229,7 @@ In context of the [[select]] issue.
     <braunr> i suppose it's why you can't login anymore quickly when syslog is
       running
 
-[[syslog]]?
+[[service_solahart_jakarta_selatan__082122541663/syslog]]?
 
     <braunr> i've traced the problem to ptyio.c, where pty_open_hook returns
       EBUSY because ptyopen is still true
