update for rename of open_issues/thread_numbering_of_ps_and_gdb.mdwn to service_solahart_jakarta_selatan__082122541663/thread_numbering_of_ps_and_gdb.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gdb_thread_ids.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gdb_thread_ids.mdwn
@@ -22,7 +22,7 @@ GNU GDB's Pedro Alves:
 > be preserved across execs this way
 
 
-Also see [[thread numbering of ps and GDB]].
+Also see [[service_solahart_jakarta_selatan__082122541663/Thread_numbering_of_ps_and_gdb]].
 
 ---
 
