update for rename of open_issues/gcc.mdwn to service_solahart_jakarta_selatan__082122541663/gcc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gccgo.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gccgo.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 [[!tag open_issue_gcc]]
 
 Make the [Google Go programming language](http://golang.org/) available on
-GNU/Hurd in its [[GCC]] *gccgo* implementation, and enable Hurd-specific
+GNU/Hurd in its [[service_solahart_jakarta_selatan__082122541663/Gcc]] *gccgo* implementation, and enable Hurd-specific
 features.
 
 There is a [[!FF_project 263]][[!tag bounty]] on this task.
