update for rename of open_issues/gcc.mdwn to service_solahart_jakarta_selatan__082122541663/gcc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/libtool.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libtool.mdwn
@@ -10,7 +10,7 @@ License|/fdl]]."]]"""]]
 
 [[!tag open_issue_porting]]
 
-# [[GCC]]: `libtool: finish`: `ldconfig` is not run for the Hurd.
+# [[service_solahart_jakarta_selatan__082122541663/Gcc]]: `libtool: finish`: `ldconfig` is not run for the Hurd.
 
 This probably comes from libtool's `libltdl/m4/libtool.m4` (or similar):
 `finish_cmds`.
