update for rename of open_issues/gcc.mdwn to service_solahart_jakarta_selatan__082122541663/gcc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/fifo_thread_explosion.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/fifo_thread_explosion.mdwn
@@ -11,7 +11,7 @@ License|/fdl]]."]]"""]]
 [[!tag open_issue_hurd]]
 
 As reported in [[!message-id "87sj80yb3e.fsf@kepler.schwinge.homeip.net"]],
-after a [[GCC]] build (native, so three stages bootstrap), we got:
+after a [[service_solahart_jakarta_selatan__082122541663/Gcc]] build (native, so three stages bootstrap), we got:
 
   PID  UID  PPID  PGrp  Sess TH  Vmem   RSS %CPU     User   System Args
   449 1000     3     1     1 10118 782M 198M 0.0  0:40.78  2:26.65 /hurd/fifo
