update for rename of open_issues/git_duplicated_content.mdwn to service_solahart_jakarta_selatan__082122541663/git_duplicated_content.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/git-core-2.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/git-core-2.mdwn
@@ -277,7 +277,7 @@ Again:
     warning: unable to unlink ld/testsuite/ld-powerpc: Operation not permitted
     fatal: cannot create directory at 'ld/testsuite/ld-powerpc': Operation not permitted
 
-And: [[git_duplicated_content]].
+And: [[service_solahart_jakarta_selatan__082122541663/git_duplicated_content]].
 
 All these (very likely) have the same root cause: `SA_RESTART` restarting too
 much.
@@ -289,7 +289,7 @@ invoked every second via `setitimer(ITIMER_REAL)`) to display status messages:
 To avoid the status update signals every second, in
 `[git]/progress.c:start_progress_delay` we can just return `NULL` (manually in
 GDB, for example), then both the *error: git checkout-index* and the
-[[duplicated content|git_duplicated_content]] issues go away.
+[[duplicated content|service_solahart_jakarta_selatan__082122541663/git_duplicated_content]] issues go away.
 
 I'm guessing that when returning from a `SA_RESTART` signal handler, too much
 of the \`\`syscall''s is being restarted.  For example, if a file has already
