update for rename of open_issues/term_blocking.mdwn to service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/select.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select.mdwn
@@ -1510,7 +1510,7 @@ IRC, unknown channel, unknown date:
       dying
     <rbraunh> http://www.gnu.org/software/hurd/open_issues/term_blocking.html
 
-[[Term_blocking]].
+[[service_solahart_jakarta_selatan__082122541663/Term_blocking]].
 
 
 ### IRC, freenode, #hurd, 2012-12-05
