update for rename of open_issues/term_blocking.mdwn to service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -1720,7 +1720,7 @@ See also [[open_issues/libpthread/t/fix_have_kernel_resources]].
     <youpi> I don't have such issue
     <braunr> ah ? i need to retest that then
 
-Same issue as [[term_blocking]] perhaps?
+Same issue as [[service_solahart_jakarta_selatan__082122541663/term_blocking]] perhaps?
 
 
 ## IRC, freenode, #hurd, 2013-01-06
