update for rename of open_issues/default_pager.mdwn to service_solahart_jakarta_selatan__082122541663/default_pager.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/trust_the_behavior_of_translators.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/trust_the_behavior_of_translators.mdwn
@@ -24,7 +24,7 @@ another problem described.
     <braunr> slpz: i don't know what it should do, but currently, it uses the
       default pager
 
-[[default_pager]].
+[[service_solahart_jakarta_selatan__082122541663/default_pager]].
 
     <slpz> braunr: I know, but I was thinking about an alternative, for the
       case in which a translator in not behaving properly
