update for rename of open_issues/profiling.mdwn to service_solahart_jakarta_selatan__082122541663/profiling.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
@@ -30,7 +30,7 @@ We have debugging infrastructure.  For example:
 
   * [[latrace]]
 
-  * [[profiling]]
+  * [[service_solahart_jakarta_selatan__082122541663/profiling]]
 
   * *Checkpoint/restart allows the state of a set of processes to be saved to
     persistent storage, then restarted at some future time* -- quoting from
