update for rename of open_issues/profiling.mdwn to service_solahart_jakarta_selatan__082122541663/profiling.mdwn

--- a/community/gsoc/project_ideas/dtrace.mdwn
+++ b/community/gsoc/project_ideas/dtrace.mdwn
@@ -19,7 +19,7 @@ problems, these are mostly just guesses. Better understanding what really
 causes bad performance is necessary to improve the situation.
 
 For that, we need tools for performance measurements. While all kinds of more
-or less specific [[open_issues/profiling]] tools could be conceived, the most promising and
+or less specific [[service_solahart_jakarta_selatan__082122541663/profiling]] tools could be conceived, the most promising and
 generic approach seems to be a framework for logging certain events in the
 running system (both in the microkernel and in the Hurd servers). This would
 allow checking how much time is spent in certain modules, how often certain
