update for rename of open_issues/profiling.mdwn to service_solahart_jakarta_selatan__082122541663/profiling.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 article"]]) deals with analyzing how computing resources are used for
 completing a specified task.
 
-[[Profiling]] is one relevant tool.
+[[service_solahart_jakarta_selatan__082122541663/Profiling]] is one relevant tool.
 
 In [[microkernel]]-based systems, there is generally a considerable [[RPC]]
 overhead.
