update for rename of open_issues/formal_verification.mdwn to service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
@@ -332,7 +332,7 @@ In context of the [[select]] issue.
 
 This issue may be a simple programming error, or it may be more complicated.
 
-Methods of [[formal_verification]] should be applied to confirm that there is
+Methods of [[service_solahart_jakarta_selatan__082122541663/formal_verification]] should be applied to confirm that there is
 no error in `/hurd/term`'s logic itself.  There are tools for formal
 verification/[[code_analysis]] that can likely help here.
 
