update for rename of open_issues/mach_on_top_of_posix.mdwn to service_solahart_jakarta_selatan__082122541663/mach_on_top_of_posix.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/implementing_hurd_on_top_of_another_system.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/implementing_hurd_on_top_of_another_system.mdwn
@@ -18,7 +18,7 @@ doing that does not really integratable the Hurd guest into the host system.
 There is also a more direct way, more powerful, but it also has certain
 requirements to do it effectively.
 
-See also [[Mach_on_top_of_POSIX]].
+See also [[service_solahart_jakarta_selatan__082122541663/Mach_on_top_of_posix]].
 
 
 # IRC, freenode, #hurd, August / September 2010
@@ -60,7 +60,7 @@ See also [[Mach_on_top_of_POSIX]].
     <marcusb> ArneBab: in fact, John Tobey did this a couple of years ago, or
       started it
 
-[[Mach_on_top_of_POSIX]].
+[[service_solahart_jakarta_selatan__082122541663/Mach_on_top_of_posix]].
 
     <marcusb> ArneBab: or you can just implement parts of it and relay to Linux
       for the rest
