update for rename of open_issues/mach_on_top_of_posix.mdwn to service_solahart_jakarta_selatan__082122541663/mach_on_top_of_posix.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/linux_as_the_kernel.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/linux_as_the_kernel.mdwn
@@ -14,7 +14,7 @@ operating system/kernel, like [[UNIX]], for example, the Linux kernel.  This is
 not a [[microkernel]], but that is not an inherent hindrance; depending on what
 the goals are.
 
-There has been an attempt for building a [[Mach_on_top_of_POSIX]].
+There has been an attempt for building a [[service_solahart_jakarta_selatan__082122541663/Mach_on_top_of_posix]].
 
 
 # IRC, freenode, #hurd, 2012-02-08
