update for rename of open_issues/performance.mdwn to service_solahart_jakarta_selatan__082122541663/performance.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
@@ -14,7 +14,7 @@ Program_analysis_(computer_science) desc="Wikipedia article"]]), there is
 static code analysis ([[!wikipedia Static_code_analysis desc="Wikipedia
 article"]]) and dynamic program analysis ([[!wikipedia Dynamic_program_analysis
 desc="Wikipedia article"]]).  This topic overlaps with [[performance
-analysis|performance]], [[service_solahart_jakarta_selatan__082122541663/formal_verification]], as well as general
+analysis|service_solahart_jakarta_selatan__082122541663/performance]], [[service_solahart_jakarta_selatan__082122541663/formal_verification]], as well as general
 [[debugging]].
 
 [[!toc]]
