update for rename of open_issues/performance.mdwn to service_solahart_jakarta_selatan__082122541663/performance.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 
 *Profiling* ([[!wikipedia Profiling_(computer_programming) desc="Wikipedia
 article"]]) is a tool for tracing where CPU time is spent.  This is usually
-done for [[performance analysis|performance]] reasons.
+done for [[performance analysis|service_solahart_jakarta_selatan__082122541663/performance]] reasons.
 
   * [[hurd/debugging/rpctrace]]
 
