update for rename of open_issues/performance.mdwn to service_solahart_jakarta_selatan__082122541663/performance.mdwn

--- a/community/gsoc/project_ideas/dtrace.mdwn
+++ b/community/gsoc/project_ideas/dtrace.mdwn
@@ -14,7 +14,7 @@ License|/fdl]]."]]"""]]
 [[!tag open_issue_gnumach]]
 
 One of the main problems of the current Hurd implementation is very poor
-[[open_issues/performance]]. While we have a bunch of ideas what could cause the performance
+[[service_solahart_jakarta_selatan__082122541663/performance]]. While we have a bunch of ideas what could cause the performance
 problems, these are mostly just guesses. Better understanding what really
 causes bad performance is necessary to improve the situation.
 
