update for rename of open_issues/clock_gettime.mdwn to service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/select.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select.mdwn
@@ -651,7 +651,7 @@ IRC, unknown channel, unknown date:
     <youpi> well, I'd say gnumach could grow a nanosecond-precision time value
     <youpi> e.g. for clock_gettime precision and such
 
-[[clock_gettime]].
+[[service_solahart_jakarta_selatan__082122541663/clock_gettime]].
 
     <braunr> so you would prefer me adding the time_spec_t time to gnumach
       rather than the hurd ?
