update for rename of open_issues/latrace.mdwn to service_solahart_jakarta_selatan__082122541663/latrace.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
@@ -28,7 +28,7 @@ We have debugging infrastructure.  For example:
 
   * [[ltrace]]
 
-  * [[latrace]]
+  * [[service_solahart_jakarta_selatan__082122541663/latrace]]
 
   * [[service_solahart_jakarta_selatan__082122541663/profiling]]
 
