update for rename of open_issues/strict_aliasing.mdwn to service_solahart_jakarta_selatan__082122541663/strict_aliasing.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
@@ -187,7 +187,7 @@ harmonized.  Debian GCC (which is used in binutils' testsuite) likes to pass
 sysroots.  In the GDB build, there are several occurences of *error:
 dereferencing type-punned pointer will break strict-aliasing rules* in the
 MIG-generated stub files; thus no `-Werror` until that is resolved
-([[strict_aliasing]]).
+([[service_solahart_jakarta_selatan__082122541663/strict_aliasing]]).
 
 This takes up around 1.3 GiB, and needs roughly 17 min on kepler.SCHWINGE and
 79 min on coulomb.SCHWINGE.
