update for rename of open_issues/latrace.mdwn to service_solahart_jakarta_selatan__082122541663/latrace.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
@@ -26,7 +26,7 @@ done for [[performance analysis|service_solahart_jakarta_selatan__082122541663/p
 
   * [[ltrace]]
 
-  * [[latrace]]
+  * [[service_solahart_jakarta_selatan__082122541663/latrace]]
 
   * [[community/gsoc/project_ideas/dtrace]]
 
