--- a/public_hurd_boxen/installation.mdwn
+++ b/public_hurd_boxen/installation.mdwn
@@ -117,7 +117,7 @@ Steps for *install_crosshurd*:
 
       * \# /install_packages
 
-  * Until [[open_issues/screen]] is fixed:
+  * Until [[service_solahart_jakarta_selatan__082122541663/screen]] is fixed:
 
       * Install `flubber:~tschwinge/screen_4.0.3-11_hurd-i386.deb` instead.
 
