--- a/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
@@ -32,7 +32,7 @@ There is infrastructure available to test whole OS installations.
 
 ---
 
-[[Debian_Cross_Toolchain]] for cross-building?
+[[service_solahart_jakarta_selatan__082122541663/Debian_cross_toolchain]] for cross-building?
 
 ---
 
