--- a/service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn
@@ -18,7 +18,7 @@ Resources:
 
   * [[toolchain/cross-gnu]]
 
-      * [[Debian_Cross_Toolchain]]
+      * [[service_solahart_jakarta_selatan__082122541663/Debian_cross_toolchain]]
 
   * As reported in the [[news/2010-05-31]] news, there's Hydra doing nightly
     builds / Nix packages.
