update for rename of open_issues/runit.mdwn to service_solahart_jakarta_selatan__082122541663/runit.mdwn

--- a/public_hurd_boxen/installation/flubber.mdwn
+++ b/public_hurd_boxen/installation/flubber.mdwn
@@ -28,7 +28,7 @@ ikiwiki
     LC_ALL=C date >> /var/log/git-daemon
     git daemon --verbose --user-path >> /var/log/git-daemon 2>&1 &
 
-Should [[fix runit|open issues/runit]] and use Debian's `git-daemon-run`
+Should [[fix runit|service_solahart_jakarta_selatan__082122541663/runit]] and use Debian's `git-daemon-run`
 package instead.
 
 
