--- a/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
@@ -116,7 +116,7 @@ noninvasive on`, attach to the *term* that GDB is using.
 
 ---
 
-[[2011-07-04]].
+[[service_solahart_jakarta_selatan__082122541663/term_blocking/2011-07-04]].
 
 ---
 
