--- a/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
@@ -72,7 +72,7 @@ abandoned).
 
 # Related
 
-  * [[nightly_builds]]
+  * [[service_solahart_jakarta_selatan__082122541663/nightly_builds]]
 
       * [[nightly_builds_deb_packages]]
 
