update for rename of open_issues/nightly_builds.mdwn to service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
@@ -36,7 +36,7 @@ There is infrastructure available to test whole OS installations.
 
 ---
 
-See also [[nightly_builds]].
+See also [[service_solahart_jakarta_selatan__082122541663/nightly_builds]].
 
 
 # Debian Jenkins Instance
