update for rename of open_issues/unit_testing.mdwn to service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn
@@ -10,7 +10,7 @@ is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
 We'd like to have nightly builds for the whole [[toolchain]], and then do some
-automatic [[unit_testing]] on them.
+automatic [[service_solahart_jakarta_selatan__082122541663/unit_testing]] on them.
 
 Resources:
 
