update for rename of open_issues/prelink.mdwn to service_solahart_jakarta_selatan__082122541663/prelink.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
@@ -364,7 +364,7 @@ like `gdb/testsuite/boards/cc-with-tweaks.exp` would help, or setting
 
   * `gdb.base/attach-pie-misread.exp`
 
-    Is only run for GNU/Linux; needs [[prelink]].
+    Is only run for GNU/Linux; needs [[service_solahart_jakarta_selatan__082122541663/prelink]].
 
   * Disabled
 
