--- a/hurd/dde.mdwn
+++ b/hurd/dde.mdwn
@@ -15,7 +15,7 @@ License|/fdl]]."]]"""]]
 
   * [[open issues/user-space device drivers]]
 
-  * [[open issues/device drivers and io systems]]
+  * [[service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems]]
 
 ---
 
