update for rename of open_issues/device_drivers_and_io_systems.mdwn to service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems.mdwn

--- a/community/gsoc/project_ideas/driver_glue_code.mdwn
+++ b/community/gsoc/project_ideas/driver_glue_code.mdwn
@@ -24,7 +24,7 @@ or perhaps from one of the free BSD variants.
 
 This is [[!GNU_Savannah_task 5488]].
 [[open issues/user-space device drivers]].
-[[open issues/device drivers and io systems]].
+[[service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems]].
 
 The most promising approach for getting newer drivers seems to be [[DDE]]:
 it already does the hard work of providing an environment
