--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -830,7 +830,7 @@ min on coulomb.SCHWINGE.
 
   * `libtool: finish`: `ldconfig` is not run for the Hurd.
 
-    [[libtool]].
+    [[service_solahart_jakarta_selatan__082122541663/libtool]].
 
   * `libjvm.la`, `.libs/libjvm.so`, `libgij.la`, `.libs/libgij.so.12.0.0`
 
