--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -1156,7 +1156,7 @@ Most of the issues raised on this page has been resolved, a few remain.
     <braunr> the port leak i observed a few days ago is because of exim4 (the
       infamous loop eating the cpu we've been seeing regularly)
 
-[[fork_deadlock]]?
+[[service_solahart_jakarta_selatan__082122541663/fork_deadlock]]?
 
     <youpi> oh
     <braunr> next time it happens, and if i have the occasion, i'll examine the
