--- a/hurd/translator/nfs.mdwn
+++ b/hurd/translator/nfs.mdwn
@@ -20,4 +20,4 @@ project's topic-branch.
 
   * [[libnetfs: `io_map`|service_solahart_jakarta_selatan__082122541663/libnetfs_io_map]] issue
 
-  * [[open_issues/libnfs]]
+  * [[service_solahart_jakarta_selatan__082122541663/libnfs]]
