update for rename of open_issues/select_bogus_fd.mdwn to service_solahart_jakarta_selatan__082122541663/select_bogus_fd.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/python.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/python.mdwn
@@ -30,7 +30,7 @@ First, make the language functional, have its test suite pass without errors.
 
 ## Analysis
 
-  * [[select_bogus_fd]]
+  * [[service_solahart_jakarta_selatan__082122541663/select_bogus_fd]]
 
 ---
 
