update for rename of open_issues/hurdextras.mdwn to service_solahart_jakarta_selatan__082122541663/hurdextras.mdwn

--- a/hurd/translator/procfs.mdwn
+++ b/hurd/translator/procfs.mdwn
@@ -23,7 +23,7 @@ management tools to work.  (On Linux, the `/proc` filesystem is used also for
 debugging purposes; but this is highly system-specific anyways, so there is
 probably no point in trying to duplicate this functionality as well...)
 
-Ther was an implementation in [[open_issues/HurdExtras]],
+Ther was an implementation in [[service_solahart_jakarta_selatan__082122541663/Hurdextras]],
 <http://www.nongnu.org/hurdextras/#procfs>.
 
 Madhusudan.C.S has implemented a new, fully functional [[procfs|madhusudancs]] for
