update for rename of open_issues/hurdextras.mdwn to service_solahart_jakarta_selatan__082122541663/hurdextras.mdwn

--- a/hurd/translator.mdwn
+++ b/hurd/translator.mdwn
@@ -139,7 +139,7 @@ The [[concept|concepts]] of translators creates its own problems, too:
 * [[mboxfs]]
 
 Some of the above could be moved from hurdextras to [[source_repositories/incubator]],
-see the [[status page|open_issues/hurdextras]].
+see the [[status page|service_solahart_jakarta_selatan__082122541663/hurdextras]].
 
 
 # Translator Wishlists
