update for rename of open_issues/multithreading.mdwn to service_solahart_jakarta_selatan__082122541663/multithreading.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -360,7 +360,7 @@ Last reviewed up to the [[Git mirror's 3a930d3fc68785662f5f3f4af02474cb21a62056
         and x86_64` (`__private_ss`).
 
       * Might `-fsplit-stack` be useful for us with respect to our
-        [[multithreaded|multithreading]] libraries?
+        [[multithreaded|service_solahart_jakarta_selatan__082122541663/multithreading]] libraries?
 
   * `gcc/ada`, `gcc/testsuite/ada`, `gcc/testsuite/gnat.dg`, `gnattools`,
     `libada` (not reviewed)
