--- a/service_solahart_jakarta_selatan__082122541663/threads_issues.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/threads_issues.mdwn
@@ -12,4 +12,4 @@ List of issues w.r.t. the Hurd's many-threads paradigm.
 
 [[!tag open_issue_hurd]]
 
-  * [[fsync]]
+  * [[service_solahart_jakarta_selatan__082122541663/fsync]]
