update for rename of open_issues/git-core-2.mdwn to service_solahart_jakarta_selatan__082122541663/git-core-2.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/git_duplicated_content.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/git_duplicated_content.mdwn
@@ -29,7 +29,7 @@ License|/fdl]]."]]"""]]
     # On branch master
     nothing to commit (working directory clean)
 
-([[Git issue|git-core-2]] is known.)
+([[Git issue|service_solahart_jakarta_selatan__082122541663/git-core-2]] is known.)
 
     $ git-new-workdir ~/tmp/binutils/git /media/hd1s2/tmp/master master
     error: unable to create file bfd/elf32-dlx.c (Interrupted system call)
@@ -125,4 +125,4 @@ No further difference.
 
 # 2011-06-13
 
--> [[git-core-2]]
+-> [[service_solahart_jakarta_selatan__082122541663/git-core-2]]
