update for rename of open_issues/binutils.mdwn to service_solahart_jakarta_selatan__082122541663/binutils.mdwn

--- a/community/gsoc/project_ideas/testing_framework/discussion.mdwn
+++ b/community/gsoc/project_ideas/testing_framework/discussion.mdwn
@@ -63,7 +63,7 @@ freenode, #hurd channel, 2011-03-05:
     <pinotree> plus the binutils ones, i guess
     <youpi> yes
 
-[[open_issues/binutils#weak]].
+[[service_solahart_jakarta_selatan__082122541663/binutils#weak]].
 
     <antrik> anyways, I don't think relying on external testsuites for
       regression testing is a good plan
