update for rename of open_issues/binutils.mdwn to service_solahart_jakarta_selatan__082122541663/binutils.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/boehm_gc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/boehm_gc.mdwn
@@ -201,7 +201,7 @@ sources, and for `libatomic_ops` to the
         or use some other interface.  [[!tag open_issue_glibc]]
         This is also likely the issue causing the GDB [[!tag open_issue_gdb]]
         `GC_find_limit_with_bound` SIGSEGV startup confusion described in
-        [[binutils]].
+        [[service_solahart_jakarta_selatan__082122541663/binutils]].
 
       * `#define SIG_SUSPEND SIGUSR1`, `#define SIG_THR_RESTART SIGUSR2`
 
