update for rename of open_issues/binutils.mdwn to service_solahart_jakarta_selatan__082122541663/binutils.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -747,7 +747,7 @@ This takes up around 3.5 GiB, and needs roughly 3.5 h on kepler.SCHWINGE and
         -checking for the default library search path... /lib /usr/lib /lib/i386-linux-gnu /usr/lib/i386-linux-gnu /lib/i486-linux-gnu /usr/lib/i486-linux-gnu /usr/local/lib
         +checking for the default library search path... /lib /usr/lib
 
-    [[binutils]] issue?  Should be aligned by Samuel's binutils patch.
+    [[service_solahart_jakarta_selatan__082122541663/binutils]] issue?  Should be aligned by Samuel's binutils patch.
 
   * `./classpath/[...]/*.properties`
 
