update for rename of open_issues/packaging_libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/packaging_libpthread.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -26,7 +26,7 @@ Most of the issues raised on this page has been resolved, a few remain.
       glibc (with proper symbols forwarding etc), it doesn't change that you
       cannot use both cthreads and pthreads in the same app, right?
 
-[[Packaging_libpthread]].
+[[service_solahart_jakarta_selatan__082122541663/Packaging_libpthread]].
 
     <youpi> it's the same libpthread
     <youpi> symbol forwarding does not magically resolve that libpthread lacks
