update for rename of open_issues/packaging_libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/packaging_libpthread.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -3046,7 +3046,7 @@ Failures, mostly in order of appearance:
     -print-file-name=libstdc++.so.6`, etc.).
 
     Even if that that is being worked around, the tests nowadays
-    ([[packaging_libpthread]]) fail with:
+    ([[service_solahart_jakarta_selatan__082122541663/packaging_libpthread]]) fail with:
 
         dlopen failed: [...]/libc.so.0.3: version `GLIBC_2.13_DEBIAN_31' not found (required by [...]/libstdc++.so.6)
 
