update for rename of open_issues/packaging_libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/packaging_libpthread.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/libpthread_dlopen.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread_dlopen.mdwn
@@ -38,7 +38,7 @@ License|/fdl]]."]]"""]]
     <youpi> but for this we need to build libpthread along glibc, to get it
       really working
 
-[[Packaging_libpthread]].
+[[service_solahart_jakarta_selatan__082122541663/Packaging_libpthread]].
 
     <youpi> and that's the tricky part (Makefile & such) which hasn't been done
       yet
@@ -112,7 +112,7 @@ IRC, freenode, #hurd, 2011-08-17
     < youpi> making it simpler would need building libpthread at the same time
       as libc
 
-[[packaging_libpthread]]
+[[service_solahart_jakarta_selatan__082122541663/packaging_libpthread]]
 
 
 # IRC, freenode, #hurd, 2013-09-03
