update for rename of open_issues/performance/fork.mdwn to service_solahart_jakarta_selatan__082122541663/performance/fork.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -32,7 +32,7 @@ call|/glibc/fork]]'s case.
 
   * [[Degradation]]
 
-  * [[fork]]
+  * [[service_solahart_jakarta_selatan__082122541663/performance/fork]]
 
   * [[service_solahart_jakarta_selatan__082122541663/performance/Ipc_virtual_copy]]
 
