update for rename of open_issues/dde.mdwn to service_solahart_jakarta_selatan__082122541663/dde.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/pci_arbiter.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/pci_arbiter.mdwn
@@ -10,7 +10,7 @@ License|/fdl]]."]]"""]]
 
 [[!tag open_issue_hurd]]
 
-For [[DDE]]/X.org/...
+For [[service_solahart_jakarta_selatan__082122541663/Dde]]/X.org/...
 
 
 # IRC, freenode, #hurd, 2012-02-19
