update for rename of open_issues/vfat_test_suite.mdwn to service_solahart_jakarta_selatan__082122541663/vfat_test_suite.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/file_system_exerciser.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/file_system_exerciser.mdwn
@@ -28,4 +28,4 @@ discussion|hurd/translator/tmpfs/discussion]], and on [[Maksym_Planeta]].
     <pinotree> (and in general to test fs'es)
 
 
-## [[VFAT_Test_Suite]]
+## [[service_solahart_jakarta_selatan__082122541663/Vfat_test_suite]]
