update for rename of open_issues/librpci.mdwn to service_solahart_jakarta_selatan__082122541663/librpci.mdwn

--- a/hurd/debugging/rpctrace.mdwn
+++ b/hurd/debugging/rpctrace.mdwn
@@ -348,4 +348,4 @@ See `rpctrace --help` about how to use it.
 
 # See Also
 
-See also [[open_issues/librpci]].
+See also [[service_solahart_jakarta_selatan__082122541663/librpci]].
