update for rename of open_issues/pci_arbiter.mdwn to service_solahart_jakarta_selatan__082122541663/pci_arbiter.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/dde.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dde.mdwn
@@ -155,7 +155,7 @@ After the microkernel devroom at [[community/meetings/FOSDEM_2013]].
     <youpi> there's no autoloader for now
     <youpi> we'd need a bus arbitrer that'd do autoprobing
 
-[[PCI_arbiter]].
+[[service_solahart_jakarta_selatan__082122541663/Pci_arbiter]].
 
     <pinotree> i see
     <pinotree> (you see i'm not really that low level, so pardon the flood of
@@ -267,7 +267,7 @@ After the microkernel devroom at [[community/meetings/FOSDEM_2013]].
     <antrik> right
 
 
-# [[PCI_Arbiter]]
+# [[service_solahart_jakarta_selatan__082122541663/Pci_arbiter]]
 
 ## IRC, freenode, #hurd, 2012-02-21
 
